Fix #733 "IE7: Navbar content misaligned in Noscript mode"
- position fr-goto-content the like the 2 selectors
- keep white space around fr-noscript-choice so that IE7 centers it

--- a/src/resources/apps/fr/style/form-runner-base.less
+++ b/src/resources/apps/fr/style/form-runner-base.less
@@ -155,7 +155,7 @@ button.btn-link {
 /* ***** General Layout ********************************************************************************************* */
 
 // Language and mode selectors
-.fr-language-choice, .fr-noscript-choice {
+.fr-language-choice, .fr-noscript-choice, .fr-goto-content {
     margin-right: 1em;
 
     .xforms-label {
